--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
 }
 .main {
   background-image: url("Image/bg.jpg");
-  height: 704px;
+  height: 680px;
   position: relative;
   background-position: center center;
   background-repeat: no-repeat;
@@ -76,6 +76,7 @@ nav {
   border: 0.4px solid #ffffff78;
   border-radius: 5px;
   padding: 0px 10px;
+  margin: 12px 0px;
 }
 .btn-big {
   height: 55px;
@@ -86,7 +87,7 @@ nav {
   border-radius: 5px;
   border: none;
   font-size: 18px;
-  margin: 5px 5px;
+  margin: 12px 5px;
   cursor: pointer;
 }
 .signin {
@@ -111,10 +112,11 @@ nav {
   z-index: 1;
 }
 section {
-  max-width: 70vw;
+  max-width: 65vw;
   margin: auto;
   display: flex;
-  /* flex-direction: column; */
+  justify-content: center;
+  align-items: center;
   position: relative;
   height: 500px;
 }
@@ -137,25 +139,23 @@ section {
 }
 .Img {
   position: relative;
-  display: flex;
 }
-section .Img img {
+.Img img {
   height: 300px;
-  align-self: center;
   position: relative;
   z-index: 10;
 }
-section .Img video {
+.Img video {
   position: absolute;
-  top: 164px;
-  right: 57px;
-  width: 291px;
+  top: 52px;
+  right: 0;
+  width: 346px;
 }
 #sec-img {
   position: absolute;
-  top: 126px;
-  right: 71px;
-  width: 251px;
+  top: 32px;
+  right: 79px;
+  width: 246px;
 }
 
 #set {
@@ -174,7 +174,7 @@ section .Img video {
   height: 10px;
 }
 .faq {
-  height: 850px;
+  height: auto;
   color: white;
 }
 .faq h2 {
@@ -194,6 +194,9 @@ section .Img video {
   display: flex;
   justify-content: space-between;
 }
+.faqbox svg {
+  filter: invert(1);
+}
 .con {
   margin-top: 30px;
   display: flex;
@@ -201,17 +204,42 @@ section .Img video {
   align-items: center;
   gap: 10px;
 }
-.footer {
-  height: 200px;
+
+footer {
+  color: rgba(255, 255, 255, 0.7);
+  max-width: 70vw;
+  margin: auto;
+  padding: 60px;
 }
+footer a {
+  margin: 10px;
+  color: rgba(255, 255, 255, 0.7);
+}
+.footer-item {
+  margin: 20px;
+}
+
+.footer {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  color: white;
+}
+
 @media all and (max-width: 845px) {
+  nav img {
+    width: 100px;
+  }
+  nav div {
+    width: 200px;
+  }
   .hero > :first-child {
     font-weight: bolder;
     font-size: 40px;
     text-align: center;
-    /* line-height: 74px; */
   }
-
+  .mail input {
+    width: 350px;
+  }
   .mail {
     display: flex;
     flex-direction: column;
@@ -231,4 +259,44 @@ section .Img video {
   .Img video {
     width: 300px;
   }
+
+  #sec-img {
+    right: 50px;
+    width: 200px;
+  }
+}
+
+@media screen and (max-width: 1200px) {
+  .footer {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+  .Img img {
+    width: 295px;
+  }
+
+  .Img video {
+    width: 247px;
+  }
+
+  footer {
+    max-width: 90vw;
+    padding: 75px 0;
+  }
+
+  .footer-item {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+}
+
+.footer a {
+  font-size: 14px;
+  color: rgba(255, 255, 255, 0.7);
+}
+
+.footer-item {
+  display: flex;
+  flex-direction: column;
 }
